Some XML serialization

--- a/src/MIM.Schema.Tests/MIM.Schema.Tests.csproj
+++ b/src/MIM.Schema.Tests/MIM.Schema.Tests.csproj
@@ -20,4 +20,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MIM.Schema\MIM.Schema.csproj" />
+    </ItemGroup>
+
 </Project>
